--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^2.3.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
