fix: add prepare script to build lib during package installation

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/gorhom/react-native-portal#readme",
   "scripts": {
+    "prepare": "yarn build",
     "test": "jest",
     "typescript": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
