--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "@release-it/conventional-changelog": "^2.0.0",
     "@types/jest": "^26.0.0",
     "@types/lodash.isequal": "^4.5.5",
-    "@types/react": "^17.0.0",
-    "@types/react-native": "0.63.37",
+    "@types/react": "^18.2.37",
+    "@types/react-native": "^0.72.6",
     "auto-changelog": "^2.2.1",
     "copyfiles": "^2.4.1",
     "eslint": "^7.28.0",
@@ -61,10 +61,10 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^2.3.1",
-    "react": "16.11.0",
+    "react": "^18.2.0",
     "react-native": "0.62.2",
     "release-it": "^14.2.2",
-    "typescript": "^4.3.2"
+    "typescript": "^5.2.2"
   },
   "peerDependencies": {
     "react": "*",
